# ai-talent-sourcing-app

./: .gitignore  MANIFEST.in  README.md  customize_job_applicant.py  customize_job_applicant_canonical.py  customize_job_applicant_v2.py  license.txt  pipeline.py  pyproject.toml  requirements.txt  revert_job_applicant.py  setup.cfg  setup.py  setup_email_log_doctype.py
ai_talent_sourcing/: enrichment_handler.py  hooks.py  modules.txt
baml_client/: inlinedbaml.py  types.py
baml_src/: resume.baml
deploy/erpnext/: ADR-001-migrate-erpnext-to-hetzner.md  Caddyfile  MIGRATION_RUNBOOK.md  docker-compose.yml  example.env
enrichment-worker/: Dockerfile  README.md  docker-compose.yml  requirements.txt
enrichment-worker/app/: config.py  email_parser.py  main.py  security.py
enrichment-worker/app/adapters/: __init__.py  gmail_adapter.py  primitive_adapter.py
enrichment-worker/app/enrichment/: baml_runner.py
enrichment-worker/app/erpnext/: client.py  email_log.py
enrichment-worker/app/extractors/: docx.py  pdf.py
enrichment-worker/app/models/: internal_event.py  webhook.py
enrichment-worker/app/queue/: __init__.py  worker.py
enrichment-worker/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py
enrichment-worker/baml_src/: clients.baml  generators.baml  resume.baml
enrichment-worker/tests/: test_e2e_forwarded_recruiter_email.py  test_email_parser.py  test_forwarded_email_detection.py  test_recruiter_source_capture.py
test_data/: linkedin_profile.txt
